# GraphicsSandbox

./: .clang-format  .gitattributes  CMakeLists.txt  README.md
sandbox/: CMakeLists.txt  main.cpp
sandbox/Common/: AssetProvider.cpp  AssetProvider.h  Common.h  ShaderProvider.cpp  ShaderProvider.h  ViewRegistrar.h
sandbox/Importer/: AssimpImporter.cpp  AssimpImporter.h
sandbox/MainWindow/: mainwindow.cpp  mainwindow.h
sandbox/Model/: Model.h
sandbox/Model/Components/: CameraComponent.h  Component.h  ComponentsRegistry.h  DirectionalLightSourceComponent.h  MaterialComponent.h  MeshComponent.h  ShadowType.cpp  ShadowType.h  TransformComponent.h
sandbox/Model/Hierarchy/: Object.cpp  Object.h  Scene.cpp  Scene.h
sandbox/Renderer/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h
sandbox/Renderer/OpenGL/Shaders/Albedo/: default.vert
sandbox/Renderer/OpenGL/Shaders/Default/: default.frag  default.vert
sandbox/Renderer/OpenGL/Shaders/Material/: material.frag  material.vert
sandbox/Stylesheets/: Stylesheets.qrc
sandbox/UI/Components/: ComponentsView.h
sandbox/UI/Components/CameraComponentView/: CameraComponentView.cpp  CameraComponentView.h  CameraComponentView.ui
sandbox/UI/Components/MaterialComponentView/: MaterialComponentView.cpp  MaterialComponentView.h  MaterialComponentView.ui
sandbox/UI/Components/MeshComponentView/: MeshComponentView.cpp  MeshComponentView.h  MeshComponentView.ui
sandbox/UI/Components/MeshComponentView/MeshOpenGLWidget/: MeshOpenGLWidget.cpp  MeshOpenGLWidget.h
sandbox/UI/Components/TransformComponentView/: TransformComponentView.cpp  TransformComponentView.h  TransformComponentView.ui
sandbox/UI/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
sandbox/UI/ObjectEditor/: ObjectEditor.cpp  ObjectEditor.h  ObjectEditor.ui
sandbox/UI/ObjectEditor/Components/: ComponentsView.h
sandbox/UI/ObjectEditor/Components/CameraComponentView/: CameraComponentView.h  CameraComponentView.ui
sandbox/UI/ObjectEditor/Components/DirectionalLightSourceComponentView/: DirectionLightSourceComponentView.cpp  DirectionLightSourceComponentView.h  DirectionLightSourceComponentView.ui
sandbox/UI/ObjectEditor/Components/MaterialComponentView/: MaterialComponentView.cpp  MaterialComponentView.h  MaterialComponentView.ui
sandbox/UI/ObjectEditor/Components/MeshComponentView/: MeshComponentView.cpp  MeshComponentView.h
sandbox/UI/ObjectEditor/Components/TransformComponentView/: TransformComponentView.cpp  TransformComponentView.h  TransformComponentView.ui
sandbox/UI/SceneBrowser/: SceneBrowser.cpp  SceneBrowser.h  SceneBrowser.ui
sandbox/UI/View/: ViewBase.h
sandbox/UI/View/OpenGL/: OpenGLView.cpp  OpenGLView.h
test/: test.scene
testdata/models/backpack/: backpack.mtl
